[gd_scene load_steps=12 format=3 uid="uid://uiob5vacbaww"]

[ext_resource type="Script" uid="uid://d3rxyce6wi3vo" path="res://Scripts/Menus/finish_menu.gd" id="1_3f1f6"]
[ext_resource type="Texture2D" uid="uid://dffcw36apjh0h" path="res://Aseprite/Menus/FinishMenu.png" id="2_3f1f6"]
[ext_resource type="Texture2D" uid="uid://cp2kqhd41rpns" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonNotPressed.png" id="3_jh6vi"]
[ext_resource type="Texture2D" uid="uid://c8ibuubi6ols5" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonPressed.png" id="4_i7l7t"]
[ext_resource type="Texture2D" uid="uid://bvqys5sol42ni" path="res://Aseprite/Menus/PauseMenu/MainMenuButton/MainMenuButtonOver.png" id="5_ciplw"]
[ext_resource type="Texture2D" uid="uid://ckymuehbk27jq" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonNotPressed.png" id="6_awxh7"]
[ext_resource type="Texture2D" uid="uid://b7oasyff5qc5" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonPressed.png" id="7_km51u"]
[ext_resource type="Texture2D" uid="uid://bclt2y7fch1gg" path="res://Aseprite/Menus/PauseMenu/ExitButton/ExitButtonOver.png" id="8_vgeew"]

[sub_resource type="Animation" id="Animation_1bolq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBackgroundColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ahwe8"]
resource_name = "finish"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBackgroundColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_or28j"]
_data = {
&"RESET": SubResource("Animation_1bolq"),
&"finish": SubResource("Animation_ahwe8")
}

[node name="FinishMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3f1f6")

[node name="FinalAnimation" type="AnimationPlayer" parent="."]
process_mode = 3
root_node = NodePath("../CanvasLayer")
libraries = {
&"": SubResource("AnimationLibrary_or28j")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 4
visible = false

[node name="PauseBackgroundColor" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenuControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PauseMenuControl"]
position = Vector2(576, 328)
scale = Vector2(1.83333, 1.751)
texture = ExtResource("2_3f1f6")

[node name="MenuVBox" type="VBoxContainer" parent="CanvasLayer/PauseMenuControl/Sprite2D"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -55.0
offset_right = -112.0
offset_bottom = -221.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox"]
layout_mode = 2
texture_normal = ExtResource("3_jh6vi")
texture_pressed = ExtResource("4_i7l7t")
texture_hover = ExtResource("5_ciplw")

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox"]
layout_mode = 2
texture_normal = ExtResource("6_awxh7")
texture_pressed = ExtResource("7_km51u")
texture_hover = ExtResource("8_vgeew")

[connection signal="pressed" from="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenuControl/Sprite2D/MenuVBox/ExitButton" to="." method="_on_exit_button_pressed"]
